--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,13 @@
 /* input elements */
 
 .input-styles {
-	@apply border border-[#DADCE0]  p-4  focus:outline-none focus:ring focus:ring-violet-300 focus:border-violet-500 hover:border-violet-400 transition-colors;
+	@apply border border-[#DADCE0]  p-4  focus:outline-none focus:ring focus:ring-violet-300 focus:border-violet-500 hover:border-violet-400 transition-colors cursor-pointer;
 }
 .label-styles {
 	@apply block text-gray-700;
 }
 .tag-styles {
-	@apply flex rounded-full bg-[#DDEDFF] p-1 px-2 m-1 text-[.75rem];
+	@apply flex rounded-full bg-[#DDEDFF] p-1 px-2 m-1 text-[.75rem] cursor-pointer;
 }
 .error-styles {
 	@apply text-center text-red-500 capitalize;
